Redis was missing from the Dockercompose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 services:
   # FastAPI Backend
   backend:
-    build: 
+    build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
     environment:
       - DATABASE_URL=postgresql://postgres:password@postgres:5432/burnout_detector
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       - DEBUG=True
     depends_on:
       - postgres
+      - redis
     volumes:
       - ./backend:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
@@ -39,5 +42,15 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  # Redis for rate limiting
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+
 volumes:
   postgres_data:
+  redis_data:
