--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -31,6 +31,7 @@ RUN adduser --system --uid 1001 nextjs
 COPY --from=builder /app/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/newrelic.js ./newrelic.js
 
 USER nextjs
 
@@ -38,5 +39,7 @@ EXPOSE 3000
 
 ENV PORT 3000
 ENV HOSTNAME "0.0.0.0"
+ENV NEW_RELIC_NO_CONFIG_FILE=true
+ENV NODE_OPTIONS="-r ./newrelic.js"
 
 CMD ["node", "server.js"]
