--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "dependencies": {
-    "node": "^24.9.0"
-  }
+    "dependencies": {
+      "node": "^24.9.0",
+      "newrelic": "latest"
+    }
 }
