--- a/backend/newrelic.ini
+++ b/backend/newrelic.ini
@@ -30,7 +30,7 @@
 # your account in the New Relic service. For more information on
 # storing and generating license keys, see
 # https://docs.newrelic.com/docs/apis/intro-apis/new-relic-api-keys/#ingest-license-key
-license_key = 16470f445cbd53bc0093166f9f56e65fFFFFNRAL
+license_key = ${NEW_RELIC_LICENSE_KEY}
 
 # The application name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
@@ -40,7 +40,7 @@ license_key = 16470f445cbd53bc0093166f9f56e65fFFFFNRAL
 # app names to group your aggregated data. For further details,
 # please see:
 # https://docs.newrelic.com/docs/apm/agents/manage-apm-agents/app-naming/use-multiple-names-app/
-app_name = On-call Burnout Detector
+app_name = ${NEW_RELIC_APP_NAME}
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -246,7 +246,7 @@ monitor_mode = false
 monitor_mode = false
 
 [newrelic:staging]
-app_name = On-call Burnout Detector (Staging)
+app_name = ${NEW_RELIC_APP_NAME} (Staging)
 monitor_mode = true
 
 [newrelic:production]
