Fix New Relic environment variable substitution
The Python agent doesn't parse ${VAR} syntax in INI files.
Pass license key and app name directly as environment variables instead.

This fixes the 'incorrect license key' error where variables weren't being substituted.

--- a/backend/newrelic.ini
+++ b/backend/newrelic.ini
@@ -30,17 +30,9 @@
 # your account in the New Relic service. For more information on
 # storing and generating license keys, see
 # https://docs.newrelic.com/docs/apis/intro-apis/new-relic-api-keys/#ingest-license-key
-license_key = ${NEW_RELIC_LICENSE_KEY}
-
-# The application name. Set this to be the name of your
-# application as you would like it to show up in New Relic UI.
-# You may also set this using the NEW_RELIC_APP_NAME environment variable.
-# The UI will then auto-map instances of your application into a
-# entry on your home dashboard page. You can also specify multiple
-# app names to group your aggregated data. For further details,
-# please see:
-# https://docs.newrelic.com/docs/apm/agents/manage-apm-agents/app-naming/use-multiple-names-app/
-app_name = ${NEW_RELIC_APP_NAME}
+# License key and app name are set via environment variables
+# NEW_RELIC_LICENSE_KEY and NEW_RELIC_APP_NAME
+# No need to set them here - the agent will read from environment
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
