--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,12 +12,12 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=10080
 # Google OAuth
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+GOOGLE_REDIRECT_URI=https://api.oncallhealth.ai/auth/google/callback
 
 # GitHub OAuth
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
-GITHUB_REDIRECT_URI=http://localhost:8000/auth/github/callback
+GITHUB_REDIRECT_URI=https://api.oncallhealth.ai/auth/github/callback
 
 # Jira OAuth
 JIRA_CLIENT_ID=xxx
@@ -30,7 +30,7 @@ LINEAR_CLIENT_SECRET=xxx
 
 # Frontend URLs
 FRONTEND_URL=http://localhost:3000
-PRODUCTION_FRONTEND_URL=https://your-frontend-domain.vercel.app
+PRODUCTION_FRONTEND_URL=https://oncallhealth.ai
 
 # Environment
 ENVIRONMENT=development
