--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 # Backend API URLs
-NEXT_PUBLIC_API_URL=https://rootly-burnout-detector-web-production.up.railway.app
-NEXT_PUBLIC_API_BASE_URL=https://rootly-burnout-detector-web-production.up.railway.app
+NEXT_PUBLIC_API_URL=https://api.oncallhealth.ai
+NEXT_PUBLIC_API_BASE_URL=https://api.oncallhealth.ai
 
 # New Relic Browser Monitoring (Optional)
 # Get these values from New Relic UI > Browser > (your app) > Application settings
